@@ -1,3 +1,7 @@
+2010-11-30  Jeff Hobbs  <jeffh@ActiveState.com>
+
+	* libbench.tcl (thread_finish): spit out evalstats info if available
+
 2010-11-09  Jeff Hobbs  <jeffh@ActiveState.com>
 
 	* tcl/expr.bench (expr-UpdateStringOfDouble): add TIP#132
